# binance_tv_rs

./: Cargo.toml  Dockerfile  README.md  flake.nix
src/: exchange.rs  lib.rs  main.rs  notify.rs  route.rs  signal.rs
src/libs/: exchange.rs  mod.rs  notify.rs  route.rs  signal.rs
