[package]
name = "binance_tv_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance-rs-async = {version= "1.3.2", futures=["all_apis"]}
actix-web = "4"
serde = "1.0.180"
env_logger = "0.10.0"
tracing = "0.1.37"
async-std = "1.12.0"
futures = "0.3.28"
actix-rt = "2.8.0"


